--- a/app/src/main/res/layout/index_list_items.xml
+++ b/app/src/main/res/layout/index_list_items.xml
@@ -2,11 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/listCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="8dp"
     app:cardCornerRadius="5dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:clickable="true">
 
 <LinearLayout
     android:layout_width="match_parent"
