--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        style="@style/cardViewsStyle"
+        style="@style/HomePageCardsStyle"
         android:onClick="chapterButton"
         app:layout_constraintBottom_toTopOf="@+id/cardView4"
         app:layout_constraintEnd_toStartOf="@+id/cardView"
@@ -56,7 +56,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
-        style="@style/cardViewsStyle"
+        style="@style/HomePageCardsStyle"
         android:onClick="juzButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cardView3"
@@ -81,7 +81,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
-        style="@style/cardViewsStyle"
+        style="@style/HomePageCardsStyle"
         android:onClick="hizbButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
@@ -105,7 +105,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        style="@style/cardViewsStyle"
+        style="@style/HomePageCardsStyle"
         android:onClick="pageButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView2"
