--- a/app/src/main/res/layout/index_list_items.xml
+++ b/app/src/main/res/layout/index_list_items.xml
@@ -5,11 +5,7 @@
     android:id="@+id/listCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="5dp"
-    android:layout_margin="8dp"
-    android:foreground="?attr/selectableItemBackground"
-    android:clickable="true">
+    style="@style/ListCardsStyle">
 
 <LinearLayout
     android:layout_width="match_parent"
