Added Functionality of getting verses by Chapter, by Pages and by Juz

--- a/app/src/main/res/layout/index_list_items.xml
+++ b/app/src/main/res/layout/index_list_items.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="index"
+        android:layout_gravity="center|top"
          />
 
     <TextView
