--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -17,4 +17,11 @@
         <item name="android:clickable">true</item>
 
     </style>
+
+    <style name="mainActivityCardLabelsStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:layout_gravity">center|bottom</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
 </resources>
