--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="the holy quran"
+        android:text="@string/the_holy_quran"
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textSize="24sp"
@@ -43,12 +43,13 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center|top"
-            android:src="@drawable/chapter_clip_art" />
+            android:src="@drawable/chapter_clip_art"
+            android:contentDescription="Choose Verse By Chapter" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chapters"
+            android:text="@string/Chapters"
             style="@style/mainActivityCardLabelsStyle"/>
     </androidx.cardview.widget.CardView>
 
@@ -71,14 +72,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Juz(s)"
+            android:text="@string/Juz"
             style="@style/mainActivityCardLabelsStyle"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
         style="@style/HomePageCardsStyle"
-        android:onClick="hizbButton"
+        android:onClick="specificVerseButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
         app:layout_constraintTop_toTopOf="@+id/cardView4" >
@@ -93,10 +94,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Specific verse"
-            android:textStyle="bold"
-            android:textAllCaps="true"
-            android:layout_gravity="center|bottom"/>
+            android:text="@string/SpecificVerse"
+            style="@style/mainActivityCardLabelsStyle"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -117,7 +116,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pages"
+            android:text="@string/Pages"
             style="@style/mainActivityCardLabelsStyle"/>
     </androidx.cardview.widget.CardView>
 
