--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -19,14 +19,93 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <LinearLayout
+        android:id="@+id/specific_verse_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IndexHeading"
+        android:baselineAligned="false"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+           >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select Chapter"
+                android:padding="8dp"
+                android:textSize="16sp" />
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="8dp">
+
+                    <RadioButton
+                        android:id="@+id/by_name_radio"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="By Name" />
+
+                    <RadioButton
+                        android:id="@+id/by_number_radio"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="By Number"
+                        android:layout_weight="1"/>
+
+                </RadioGroup>
+
+            <Spinner
+                android:id="@+id/chapter_selector_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:foreground="?attr/selectableItemBackground"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+           >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Verse number"
+                android:padding="8dp"
+                android:textSize="16sp"/>
+
+            <Spinner
+                android:id="@+id/verse_selector_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foreground="?attr/selectableItemBackground"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/index_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/IndexHeading" />
+        app:layout_constraintTop_toBottomOf="@+id/specific_verse_layout"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/index_network_message"
