--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -51,7 +51,7 @@
             android:padding="16dp" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/language_selector_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
